--- a/stylesheets/darkbyinversefilter.css
+++ b/stylesheets/darkbyinversefilter.css
@@ -20,8 +20,11 @@
 .c-message_attachment__thumb {
 	filter:hue-rotate(180deg) invert(100%);
 }
-.c-message_attachment__video_thumb {
-	filter:hue-rotate(180deg) invert(100%);
+.c-dialog .c-message_attachment__video_thumb {
+	filter:hue-rotate(180deg) invert(100%); /* for the delete pop up */
+}
+.c-dialog .c-message_attachment__thumb {
+	filter:none; /* for the delete pop up */
 }
 
 /* revert for share dialog */
