--- a/stylesheets/darkbyinversefilter.css
+++ b/stylesheets/darkbyinversefilter.css
@@ -39,8 +39,14 @@
 .emoji-outer {
 	filter:hue-rotate(180deg) invert(100%);
 }
+.c-custom_status .emoji {
+	filter:hue-rotate(180deg) invert(100%); /* custom statuses have different classes */
+}
 .c-dialog .emoji-outer,.c-menu .emoji-outer {
 	filter:none; /* since popups aren't filtered, undo emoji filter */
+}
+#col-flex .emoji-outer {
+	filter:none; /* undo filter for threads in sidebar */
 }
 
 /* revert input complete popup thing */
