--- a/stylesheets/darkbyinversefilter.css
+++ b/stylesheets/darkbyinversefilter.css
@@ -23,6 +23,9 @@
 #col_messages .c-message_attachment__audio {
 	filter:hue-rotate(180deg) invert(100%);
 }
+#col_messages .c-file__thumb {
+	filter:hue-rotate(180deg) invert(100%);
+}
 
 /* revert emoji */
 #col_messages .emoji-outer {
