--- a/stylesheets/darkbyinversefilter.css
+++ b/stylesheets/darkbyinversefilter.css
@@ -38,13 +38,12 @@
 	filter:hue-rotate(180deg) invert(100%); /* jumbomoji */
 }
 
-
-.tab_complete_ui .emoji-outer {
+#col_messages .tab_complete_ui .emoji-outer {
 	filter:none; /* revert revert the autocomplete emoji */
 }
 
 /* revert input complete popup thing */
-.tab_complete_ui {
+#col_messages .tab_complete_ui {
 	filter:hue-rotate(180deg) invert(100%);
 }
 
