new version, same garbage threads page

--- a/stylesheets/4/darkbyinversefilter.css
+++ b/stylesheets/4/darkbyinversefilter.css
@@ -46,3 +46,8 @@
 .p-message_pane .c-custom_status .emoji {
 	filter:hue-rotate(180deg) invert(100%); /* custom statuses have different classes */
 }
+
+/* the threads page is completely different because of course it is */
+.c-avatar__image,.c-message_attachment__video_thumb,.c-message_attachment__image,.c-message_attachment__thumb {
+	filter: hue-rotate(180deg) invert(100%);
+}
